syntax = "proto3";

package greet;

option java_package = "com.marcusvmleite.grpc.greet";
option java_multiple_files = true;

message Greeting {
    string first_name = 1;
    string last_name = 2;
}

message GreetRequest {
    Greeting greeting = 1;
}

message GreetResponse {
    string result = 1;
}

service GreetService {

    //Unary Service
    rpc Greet(GreetRequest) returns (GreetResponse) {};

}